# music_tagging_ms

./: .dockerignore  .env_example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
docs/: ablauf.md
examples/: acoustid_lookup_example.sh  lookup_example.sh
src/tagging_ms/: __init__.py  __main__.py  acoustid.py  api.py  joint_matcher.py  matcher.py  models.py  musicbrainz.py  ratecontrol.py  service.py  similarity.py  tagger.py  test_autotag_files.py
tests/: conftest.py
tests/fixtures/: fingerprints.json  sample_release_carmen.json  sample_release_karajan.json
tests/integration/: test_api_lookup.py
tests/integration/cassettes/: test_disc_lookup_real_discid_elton_john_duets.yaml  test_disc_lookup_returns_release_and_candidates.yaml  test_lookup_joint_carmen.yaml  test_lookup_joint_carmen_byte_equal_across_runs.yaml  test_lookup_per_file_carmen.yaml
tests/unit/: test_acoustid_normalisation.py  test_cover_art.py  test_disc_lookup.py  test_joint_matcher.py  test_matcher.py  test_ratecontrol.py  test_service.py
